# rusty-mikanos

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_cpp_kernel.sh  run_qemu.sh  rust-toolchain.toml  x86_64-unknown-none-elf.json  x86_64-unknown-none-elf.md
.cargo/: config.toml
.github/workflows/: push_check.yml
MikanLoaderPkg/: Loader.inf  Main.c  elf.hpp  frame_buffer_config.hpp  shared_header.h
apps/: Cargo.toml  target.json
apps/.cargo/: config.toml
apps/blocks/: Cargo.toml  target.json
apps/cp/: .gitignore  Cargo.toml  target.json
apps/cube/: .gitignore  Cargo.toml  target.json
cpp_kernel/: main.cpp
kernel/: Cargo.toml  Makefile  asmfunc.asm  build.rs  frame_buffer_config.hpp  main.cpp
kernel/lib/: Cargo.toml  README.md  asmfunc.asm  build.rs
kernel/lib/src/: acpi.rs  app_event.rs  asm.rs  console.rs  elf.rs  error.rs  fat.rs  font.rs  frame_buffer.rs  freetype.rs  graphics.rs  interrupt.rs  io.rs  keyboard.rs  layer.rs  lib.rs  libc.rs  logger.rs  memory_manager.rs  memory_map.rs  message.rs  mouse.rs  msr.rs  paging.rs  pci.rs  queue.rs  rust_official.rs  segment.rs  sync.rs  syscall.rs  task.rs  terminal.rs  timer.rs  window.rs  x86_descriptor.rs
kernel/lib/src/rust_official/: README.md  c_str.rs  cchar.rs  cstring.rs
kernel/lib/src/terminal/: file_descriptor.rs  history.rs  lib.rs  terminal_writer.rs
kernel/src/: asm.rs  console.rs  error.rs  font.rs  graphics.rs  interrupt.rs  layer.rs  logger.rs  main.rs  memory_allocator.rs  memory_manager.rs  memory_map.rs  mouse.rs  paging.rs  pci.rs  pixel_writer.rs  queue.rs  segment.rs  usb.rs  window.rs
kernel/usb/: .gitignore  Makefile  build.sh  lib.cpp  logger.cpp  setup.sh
resource/: jpn.txt
shared/: .gitignore  Cargo.toml  build.rs
src/: main.rs
tools/: makefont.py
(+91 files in other folders)
