[workspace]
members = [
    "kernel",
    "kernel/lib",
    "shared",
    "apps/shared_lib",
    "apps/rpn",
    "apps/large",
    "apps/winhello",
    "apps/stars",
    "apps/lines",
    "apps/eye",
    "apps/paint",
    "apps/timer",
    "apps/cube",
    "apps/blocks",
    "apps/fault",
    "apps/readfile",
    "apps/grep",
    "apps/cp",
    "apps/dpage",
]
