[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared", version = "0.1.0" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
bit_field = "0.10.1"
libm = "0.2.2"
# disable default-features to avoid a llvm error https://github.com/mooman219/fontdue/issues/98
fontdue = { version = "0.7.2", default-features = false }
spin = "0.9.3"